src/test/contracts/negative/pattern_matching_anomalies/redundant_case/w_c1_c2_c3.mligo
type t = One of int | Two of nat | Three

let s (x : t) = 
  match x with
    _     -> ()
  | One a -> ()
  | Two c -> ()
  | Three -> ()